k8s/flask-app/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  rules:
  - host: flask-app.local
    http:
      paths: /
      pathType: Prefix
      backend:
          service:
            name: flask-service
            port:
              number: 80
